--- a/may-international-main/may-international-main/services/the-firm.html
+++ b/may-international-main/may-international-main/services/the-firm.html
@@ -129,7 +129,7 @@
             </div>
             <div class="col-md-6 mt-5">
                 <div class="section-title-border"></div>
-                <p class="h5">About Us</p>
+                <p class="h5 text-center">About Us</p>
                 <h2>We Are Dynamic Team and Business Company</h2>
                 <p class="mb-5">Our core strength is to provide trade solutions services with competitive,
                     diversified range of solutions to our Corporate clients, expertise on trade, Client-centric
