--- a/may-international-main/may-international-main/index.html
+++ b/may-international-main/may-international-main/index.html
@@ -17,8 +17,9 @@
 
     <title>May International</title>
 
-    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/blog.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    
 </head>
 
 <body>
@@ -66,7 +67,7 @@
                                 <button class="dropbtn"><a href="services/services.html">Our Services</a></button>
                                 <div class="dropdown-content">
                                     <a href="services/private-client.html">Private Clients</a>
-                                    <a href="services/trade-finance.html">Trade & Finance</a>
+                                    <a href="services/trade-finance.html">Trade Finance</a>
                                     <a href="services/payment-and-risk.html">Payment & Risk</a>
                                 </div>
                             </div>
@@ -264,15 +265,15 @@
                                 <div class="card border-0 rounded-0 position-relative shadow">
                                     <div class="card-type">Investment Planning</div>
                                     <img loading="lazy" class="card-img-top rounded-0"
-                                        src="https://demo.gethugothemes.com/bexer/images/blog/post-1.webp"
+                                        src="./assets/images/blog/ships3.jpg"
                                         alt="Business Consulting">
                                     <div class="card-body ">
-                                        <div class="card-meta text-uppercase mb-2 text-center">by <strong class="text-dark">May
+                                        <div class="card-meta text-uppercase mb-2 ">by <strong class="text-dark">May
                                                 International</strong>/ on
                                             <strong class="text-dark">07 Dec 2021</strong></div>
-                                        <h4 class="card-title text-center"><a class="text-dark" href="#"
+                                        <h4 class="card-title"><a class="text-dark" href="#"
                                                 aria-label="Business Consulting">Business Consulting</a></h4>
-                                        <div class="section-title-border"></div>
+                                        <div class="section-title-border text-left"></div>
                                         <p class="card-text ">Excepteur sint occaecat cupidatat non proident, sunt in
                                             culpa
                                             qui officia deserunt mollit anim id est laborum.</p>
@@ -283,14 +284,14 @@
                                 <div class="card border-0 rounded-0 position-relative shadow">
                                     <div class="card-type">Valuable Idea</div>
                                     <img loading="lazy" class="card-img-top rounded-0"
-                                        src="https://demo.gethugothemes.com/bexer/images/blog/post-2.webp"
+                                        src="./assets/images/blog/ships1.jpg"
                                         alt="ELIT DUIED AIUSMOD DOLORY">
                                     <div class="card-body">
-                                        <div class="card-meta text-uppercase mb-2 text-center">by <strong class="text-dark">May
+                                        <div class="card-meta text-uppercase mb-2 ">by <strong class="text-dark">May
                                                 International</strong>/ on
                                             <strong class="text-dark">07 Dec 2021</strong></div>
                                         <h4 class="card-title"><a class="text-dark" href="#"
-                                                aria-label="ELIT DUIED AIUSMOD DOLORY text-center">ELIT DUIED AIUSMOD DOLORY</a>
+                                                aria-label="ELIT DUIED AIUSMOD DOLORY ">ELIT DUIED AIUSMOD DOLORY</a>
                                         </h4>
                                         <div class="section-title-border"></div>
                                         <p class="card-text">Excepteur sint occaecat cupidatat non proident, sunt in
@@ -306,7 +307,7 @@
                             <!-- <h4 class="mb-2">Latest Insights</h4> -->
                             <div class="media border-bottom border-color pb-3 mb-5 shadow ">
                                 <a href="#"><img loading="lazy" class="mr-3 post-thumb-sm pt-3"
-                                        src="https://demo.gethugothemes.com/bexer/images/blog/post-1.jpg"></a>
+                                        src="./assets/images/blog/ships2.jpg"></a>
                                 <div class="media-body pt-3">
                                     <a href="#">
                                         <h5 class="mt-0">Business Consulting</h5>
@@ -317,10 +318,10 @@
                             </div>
                             <div class="media border-bottom border-color pb-3 mb-5 shadow ">
                                 <a href="#"><img loading="lazy" class="mr-3 post-thumb-sm pt-3"
-                                        src="https://demo.gethugothemes.com/bexer/images/blog/post-2.jpg"></a>
+                                        src="./assets/images/blog/ships4.jpg"></a>
                                 <div class="media-body pt-3">
                                     <a href="#">
-                                        <h5 class="mt-0">ELIT DUIED AIUSMOD DOLORY</h5>
+                                        <h5 class="mt-0">Elit Duied Aiusmod Dolory</h5>
                                     </a>
                                     <span>07 Dec 2021</span>
                                     <a href="#" class="d-block text-danger">read more..</a>
@@ -329,7 +330,7 @@
                             </div>
                             <div class="media border-bottom border-color pb-3 shadow ">
                                 <a href="#"><img loading="lazy" class="mr-3 post-thumb-sm pt-3"
-                                        src="https://demo.gethugothemes.com/bexer/images/blog/post-4.jpg"></a>
+                                        src="./assets/images/blog/ships5.jpg"></a>
                                 <div class="media-body pt-3">
                                     <a href="#">
                                         <h5 class="mt-0">Excepteur sint ocacat cupidatat</h5>
