--- a/may-international-main/may-international-main/insights/blog.html
+++ b/may-international-main/may-international-main/insights/blog.html
@@ -13,6 +13,7 @@
 
     <title>May International</title>
     <link rel="stylesheet" href="../assets/css/blog.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
 <body>
@@ -60,7 +61,7 @@
                                 <button class="dropbtn"><a href="../services/services.html">Our Services</a></button>
                                 <div class="dropdown-content">
                                     <a href="../services/private-client.html">Private Clients</a>
-                                    <a href="../services/trade-finance.html">Trade & Finance</a>
+                                    <a href="../services/trade-finance.html">Trade Finance</a>
                                     <a href="../services/payment-and-risk.html">Payment & Risk</a>
                                 </div>
                             </div>
