--- a/may-international-main/may-international-main/insights/blog.html
+++ b/may-international-main/may-international-main/insights/blog.html
@@ -50,7 +50,7 @@
                 <div class="nav-links">
 
                     <ul>
-                        <li><a href="#">The Firm</a></li>
+                        <li><a href="../services/the-firm.html">The Firm</a></li>
                         <li><a href="blog.html">Insights</a></li>
                         <li>
                             <a href="#">Our impact</a>
