--- a/may-international-main/may-international-main/services/services.html
+++ b/may-international-main/may-international-main/services/services.html
@@ -62,7 +62,7 @@
                                 <button class="dropbtn"><a href="services.html">Our Services</a></button>
                                 <div class="dropdown-content">
                                     <a href="private-client.html">Private Clients</a>
-                                    <a href="trade-finance.html">Trade Finance</a>
+                                    <a href="trade-finance.html">Trade  Finance</a>
                                     <a href="payment-and-risk.html">Payment & Risk</a>
                                 </div>
                             </div>
@@ -176,7 +176,7 @@
                         <!-- <div class="icon-bg mb-4">
                             <a href="services/trade-finance.html"><i class='bx bx-network-chart'></i></a>
                         </div> -->
-                        <h4><a href="services/trade-finance.html" class="text-blue">Trade & Finance</a></h4>
+                        <h4><a href="services/trade-finance.html" class="text-blue">Trade Finance</a></h4>
 
                     </div>
                 </div>
