--- a/may-international-main/may-international-main/services/payment-and-risk.html
+++ b/may-international-main/may-international-main/services/payment-and-risk.html
@@ -14,6 +14,7 @@
   <title>Payment & Risk | May International</title>
  
   <link rel="stylesheet" href="../assets/css/payment-and-risk.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
   
 </head>
 
@@ -62,7 +63,7 @@
                 <button class="dropbtn"><a href="services.html">Our Services</a></button>
                 <div class="dropdown-content">
                   <a href="private-client.html">Private Clients</a>
-                  <a href="trade-finance.html">Trade & Finance</a>
+                  <a href="trade-finance.html">Trade Finance</a>
                   <a href="payment-and-risk.html">Payment & Risk</a>
                 </div>
               </div>
