--- a/may-international-main/may-international-main/services/private-client.html
+++ b/may-international-main/may-international-main/services/private-client.html
@@ -13,6 +13,7 @@
 
   <title>Priavte Clients | May International</title>
   <link rel="stylesheet" href="../assets/css/private-client.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
 <body>
@@ -60,7 +61,7 @@
                 <button class="dropbtn"><a href="services.html">Our Services</a></button>
                 <div class="dropdown-content">
                   <a href="private-client.html">Private Clients</a>
-                  <a href="trade-finance.html">Trade & Finance</a>
+                  <a href="trade-finance.html">Trade Finance</a>
                   <a href="payment-and-risk.html">Payment & Risk</a>
                 </div>
               </div>
